# 0.1.0

- Added: Assets helper abstract class

# 0.0.9

- Bugfix: onActivation and onDeactivation are not receiving a bool on wp cli (de)activation fix

# 0.0.8

- If you do not update the version in packages composer.json file git tag versions are ignored.

# 0.0.7

- Added: Helper functions for multisite plugin (de)activation

# 0.0.6

- Added: Posts table column helper

# 0.0.5

- Added: Helper class interfaces for term meta fields are matching now.
- Changed: Helper class interfaces for attachment

# 0.0.4

- Added: helper classes for attachment meta fields

# 0.0.3

- Added: abstract class Plugin can now hold one singleton instances for each implementation

# 0.0.2

- Removed: Component class because that does not work as expected
- Modified: some changes to Plugin abstract class

# 0.0.1

- Added: Plugin abstract class
- Added: Component class
- Added: TermMeta helpers