@@ -3,7 +3,11 @@
 
 namespace Palasthotel\WordPress;
 
-
+/**
+ * Class Assets
+ * @since 0.1.0
+ * @package Palasthotel\WordPress
+ */
 abstract class Assets {
 	private Plugin $plugin;
 
